# beckapp

./: .gitignore  README.md  beckapp  beckapp.service  beckapp.timer  example_backup.yaml  pyproject.toml  requirements.txt  test.py
